# Chip-as-Code

./: .gitignore  CHANGELOG.md  Cargo.toml  Chip as Code.md  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: advanced_aggregators.rs  dsl_parser.rs  evidence_good.json  evidence_missing.json  evidence_unanchored.json  intent_missing.json  intent_policy_violation.json  nl_translator.rs  policy.txt  policy_optimizer.rs  premium_download.rs  proof_system.rs  xor_golden.chip
out-test-a/: best_chip.txt  replay_report.json
out-test-b/: dataset.ndjson  lineage.ndjson  replay_report.json  training_curve.ndjson
out_cpu/: replay_report.json  training_curve.ndjson
out_cpu/stress/: shard_000.ndjson  shard_001.ndjson  shard_002.ndjson  shard_003.ndjson  shard_004.ndjson  shard_005.ndjson  shard_006.ndjson  shard_007.ndjson  shard_008.ndjson  shard_009.ndjson  shard_010.ndjson  shard_011.ndjson  shard_012.ndjson  shard_013.ndjson  shard_014.ndjson  shard_015.ndjson  shard_016.ndjson  shard_017.ndjson  shard_018.ndjson  shard_019.ndjson  shard_020.ndjson  shard_021.ndjson  shard_022.ndjson  shard_023.ndjson  shard_024.ndjson  shard_025.ndjson  shard_026.ndjson  shard_027.ndjson  shard_028.ndjson  shard_029.ndjson  shard_030.ndjson  shard_031.ndjson  shard_032.ndjson  shard_033.ndjson  shard_034.ndjson  shard_035.ndjson  shard_036.ndjson  shard_037.ndjson  shard_038.ndjson  shard_039.ndjson  (+10 more)
out_cpu/zgate/good/: atoms.ndjson
out_cpu/zgate/missing_evidence/: atoms.ndjson
out_cpu/zgate/policy_violation/: atoms.ndjson
out_cpu/zgate/unanchored/: atoms.ndjson
out_cpu/zlayer/: z0_facts.ndjson  z0_set.ndjson  z1_derivation.ndjson  z1_set.ndjson
out_cpu/zlayer_evo/: derivations.ndjson  sets.ndjson  training_curve_atoms.ndjson
out_gpu/: best_chip.txt  dataset.ndjson  lineage.ndjson  replay_report.json
out_ph_cpu/: dataset.ndjson  lineage.ndjson  replay_report.json
out_ph_cpu/zlayer_evo/: best_chip_atoms.ndjson  derivations.ndjson  sets.ndjson  training_curve_atoms.ndjson
out_ph_gpu/: best_chip.txt  replay_report.json  training_curve.ndjson
out_run1/: best_chip.txt  replay_report.json  training_curve.ndjson
src/: ast.rs  builtin.rs  canonicalization.rs  chip_ir.rs  dsl.rs  error.rs  evaluator.rs  evolve.rs  expression.rs  gatebox.rs  gpu_eval.rs  hash.rs  lib.rs  main.rs  optimizer.rs  proof.rs  translator.rs  types.rs  zlayer.rs
