[package]
name = "tdln-core"
version = "0.2.0"
edition = "2021"
authors = ["Dan Voulez <danvoulez@logline.foundation>"]
description = "TDLN Core - Truth-Determining Language Normalizer: A semantic ISA for intention-driven computing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/logline-foundation/tdln-core"
keywords = ["tdln", "semantic", "policy", "verification", "proof"]
categories = ["cryptography", "data-structures", "compilers"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing and cryptography
sha2 = "0.10"
hex = "0.4"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Regular expressions for NL parsing
regex = "1.10"

[dev-dependencies]
# Testing utilities
pretty_assertions = "1.4"

[lib]
name = "tdln_core"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
