[package]
name = "chip_as_code"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
logline = "0.1"
rand = { version = "0.8", features = ["std"] }
rand_chacha = "0.3"
rayon = "1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
ubl-ledger = "0.1"
hex = "0.4"
tempfile = "3"
glob = "0.3"
wgpu = { version = "0.19", features = ["wgsl"] }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"


