[package]
name = "chip_as_code"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Semantic Chips — deterministic boolean circuits as text DNA. Parse, evaluate, evolve, and prove policy gates with No-Guess constitutional checkpoints."
readme = "README.md"
repository = "https://github.com/danvoulez/chip-as-code"
homepage = "https://logline.foundation"
documentation = "https://docs.rs/chip_as_code"
keywords = ["chip", "policy", "semantic", "deterministic", "boolean-circuit"]
categories = ["algorithms", "command-line-utilities", "cryptography", "development-tools"]
authors = ["Dan Voulez <dan@logline.foundation>"]
exclude = [".github/*", "target/*", ".gitignore", "out/*", "out-test-*/*"]

[features]
default = []
gpu = ["wgpu", "bytemuck", "pollster"]
server = []  # For future HTTP server features

[[bin]]
name = "chip"
path = "src/main.rs"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
logline = "0.1"
rand = { version = "0.8", features = ["std"] }
rand_chacha = "0.3"
rayon = "1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
ubl-ledger = "0.1"
hex = "0.4"
tempfile = "3"
glob = "0.3"
wgpu = { version = "0.19", features = ["wgsl"], optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
pollster = { version = "0.3", optional = true }


